# crawlEvery

./: .dockerignore  .env  .gitignore  .gitmodules  Dockerfile  DockerfileC  docker-compose.yml  main.py  main_every.py  main_server.py  pyproject.toml  run.sh  scrapy.cfg
GiftInfo/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
GiftInfo/spiders/: auto.py  huya.py
common/: base.py  base_playwright.py  defines.py  file_obs.py  file_obs_async.py  huya_server.py  js_helper.py  logger_.py  t.js  utils.py
data/cookies/: user_context.json  user_cookies.json
doc/: DEV.md
front/: eslint.config.js  package.json  pnpm-lock.yaml  vite.config.ts
front/src/: index.css  main.tsx
front/src/common/: barrier.ts  base.ts  defines.ts  logger_.ts
front/src/common/ws_/: base.ts  simple-ws-client.ts
front/src/layout/: body.tsx
resources/conf/nginx/conf.d/: craw.conf
resources/docker/: Dockerfile
resources/meta/: 统计.xlsx
resources/py_mirror/: README.md
server/: base.py  defines.py  run_server.py
server/controller/: __init__.py  gift_controller.py
server/service/: gift_service.py  message_center.py  ws_service_handler.py
server/ws_/: __init__.py  connection.py  manager.py
