[project]
name = "crawlevery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "nest-asyncio>=1.6.0",
    "scrapy>=2.13.4",
    "scrapy-playwright>=0.0.44",
    "uv>=0.9.16",
    "uvicorn[standard]>=0.38.0",
    "watchdog>=6.0.0",
    "websockets>=15.0.1",
]
